First commit after all code finished

--- a/.gitignore
+++ b/.gitignore
@@ -501,3 +501,37 @@ build/portaudio/CMakeFiles/uninstall.dir/progress.make
 .vscode/launch.json
 .vscode/settings.json
 .vscode/tasks.json
+build/Mono_cbr.mp3
+build/Stereo.mp3
+build/.cmake/api/v1/reply/cache-v2-d611ce623ac49ac0230a.json
+build/.cmake/api/v1/reply/cmakeFiles-v1-618e7ed1e7191c932afc.json
+build/.cmake/api/v1/reply/codemodel-v2-b0d5734ac3d4675ec87a.json
+build/.cmake/api/v1/reply/directory-MP3-Debug-5a5f179ee7e9229bddd0.json
+build/.cmake/api/v1/reply/directory-portaudio-Debug-a5c8aa26724d82bd0dc6.json
+build/.cmake/api/v1/reply/index-2024-07-05T19-02-33-0801.json
+build/.cmake/api/v1/reply/target-MP3-Debug-852a25186277c2b38da1.json
+build/.cmake/api/v1/reply/target-MP3Reader-Debug-ac18c206d330aa389c14.json
+build/CMakeFiles/MP3Reader.dir/MP3/Decoder.cpp.obj
+build/CMakeFiles/MP3Reader.dir/MP3/Decoder.cpp.obj.d
+build/MP3/cmake_install.cmake
+build/MP3/Makefile
+build/MP3/CMakeFiles/CMakeDirectoryInformation.cmake
+build/MP3/CMakeFiles/progress.marks
+build/MP3/CMakeFiles/MP3.dir/build.make
+build/MP3/CMakeFiles/MP3.dir/cmake_clean.cmake
+build/MP3/CMakeFiles/MP3.dir/compiler_depend.make
+build/MP3/CMakeFiles/MP3.dir/compiler_depend.ts
+build/MP3/CMakeFiles/MP3.dir/Decoder.cpp.obj
+build/MP3/CMakeFiles/MP3.dir/Decoder.cpp.obj.d
+build/MP3/CMakeFiles/MP3.dir/depend.make
+build/MP3/CMakeFiles/MP3.dir/DependInfo.cmake
+build/MP3/CMakeFiles/MP3.dir/flags.make
+build/MP3/CMakeFiles/MP3.dir/Helper.cpp.obj
+build/MP3/CMakeFiles/MP3.dir/Helper.cpp.obj.d
+build/MP3/CMakeFiles/MP3.dir/progress.make
+build/MP3/CMakeFiles/MP3.dir/Frame/Frame.cpp.obj
+build/MP3/CMakeFiles/MP3.dir/Frame/Frame.cpp.obj.d
+build/MP3/CMakeFiles/MP3.dir/Frame/Header.cpp.obj
+build/MP3/CMakeFiles/MP3.dir/Frame/Header.cpp.obj.d
+build/MP3/CMakeFiles/MP3.dir/Frame/SideInformation.cpp.obj
+build/MP3/CMakeFiles/MP3.dir/Frame/SideInformation.cpp.obj.d
