- Corrected many bugs

--- a/.gitignore
+++ b/.gitignore
@@ -535,3 +535,5 @@ build/MP3/CMakeFiles/MP3.dir/Frame/Header.cpp.obj
 build/MP3/CMakeFiles/MP3.dir/Frame/Header.cpp.obj.d
 build/MP3/CMakeFiles/MP3.dir/Frame/SideInformation.cpp.obj
 build/MP3/CMakeFiles/MP3.dir/Frame/SideInformation.cpp.obj.d
+build/Mono_cbr2.mp3
+build/.cmake/api/v1/reply/index-2024-07-07T13-54-16-0462.json
