--- a/.gitignore
+++ b/.gitignore
@@ -537,3 +537,5 @@ build/MP3/CMakeFiles/MP3.dir/Frame/SideInformation.cpp.obj
 build/MP3/CMakeFiles/MP3.dir/Frame/SideInformation.cpp.obj.d
 build/Mono_cbr2.mp3
 build/.cmake/api/v1/reply/index-2024-07-07T13-54-16-0462.json
+build/JointStereoMS.mp3
+build/.cmake/api/v1/reply/index-2024-07-08T16-37-18-0566.json
