- Refactorized Frame and Decoder

--- a/.gitignore
+++ b/.gitignore
@@ -539,3 +539,6 @@ build/Mono_cbr2.mp3
 build/.cmake/api/v1/reply/index-2024-07-07T13-54-16-0462.json
 build/JointStereoMS.mp3
 build/.cmake/api/v1/reply/index-2024-07-08T16-37-18-0566.json
+build/CMakeFiles/MP3Reader.dir/compiler_depend.internal
+build/MP3/CMakeFiles/MP3.dir/compiler_depend.internal
+build/portaudio/CMakeFiles/portaudio.dir/compiler_depend.internal
