- Added convenient methods in Decoder

--- a/.gitignore
+++ b/.gitignore
@@ -542,3 +542,4 @@ build/.cmake/api/v1/reply/index-2024-07-08T16-37-18-0566.json
 build/CMakeFiles/MP3Reader.dir/compiler_depend.internal
 build/MP3/CMakeFiles/MP3.dir/compiler_depend.internal
 build/portaudio/CMakeFiles/portaudio.dir/compiler_depend.internal
+build/.cmake/api/v1/reply/index-2024-07-10T17-36-36-0521.json
