--- a/.gitignore
+++ b/.gitignore
@@ -543,3 +543,4 @@ build/CMakeFiles/MP3Reader.dir/compiler_depend.internal
 build/MP3/CMakeFiles/MP3.dir/compiler_depend.internal
 build/portaudio/CMakeFiles/portaudio.dir/compiler_depend.internal
 build/.cmake/api/v1/reply/index-2024-07-10T17-36-36-0521.json
+build/.cmake/api/v1/reply/index-2024-07-15T14-06-39-0086.json
