--- a/.gitignore
+++ b/.gitignore
@@ -544,3 +544,4 @@ build/MP3/CMakeFiles/MP3.dir/compiler_depend.internal
 build/portaudio/CMakeFiles/portaudio.dir/compiler_depend.internal
 build/.cmake/api/v1/reply/index-2024-07-10T17-36-36-0521.json
 build/.cmake/api/v1/reply/index-2024-07-15T14-06-39-0086.json
+build/.cmake/api/v1/reply/index-2024-10-31T14-48-38-0086.json
