--- a/.gitignore
+++ b/.gitignore
@@ -545,3 +545,6 @@ build/portaudio/CMakeFiles/portaudio.dir/compiler_depend.internal
 build/.cmake/api/v1/reply/index-2024-07-10T17-36-36-0521.json
 build/.cmake/api/v1/reply/index-2024-07-15T14-06-39-0086.json
 build/.cmake/api/v1/reply/index-2024-10-31T14-48-38-0086.json
+build/Mono_cbr2_.mp3
+build/.cmake/api/v1/reply/index-2024-11-02T13-44-21-0491.json
+build/.cmake/api/v1/reply/index-2024-11-02T22-05-58-0431.json
