- Started Handling errors with exception

--- a/.gitignore
+++ b/.gitignore
@@ -548,3 +548,4 @@ build/.cmake/api/v1/reply/index-2024-10-31T14-48-38-0086.json
 build/Mono_cbr2_.mp3
 build/.cmake/api/v1/reply/index-2024-11-02T13-44-21-0491.json
 build/.cmake/api/v1/reply/index-2024-11-02T22-05-58-0431.json
+build/.cmake/api/v1/reply/index-2024-11-07T14-17-12-0013.json
