--- a/.gitignore
+++ b/.gitignore
@@ -549,3 +549,10 @@ build/Mono_cbr2_.mp3
 build/.cmake/api/v1/reply/index-2024-11-02T13-44-21-0491.json
 build/.cmake/api/v1/reply/index-2024-11-02T22-05-58-0431.json
 build/.cmake/api/v1/reply/index-2024-11-07T14-17-12-0013.json
+build/e1.mp3
+build/e2.mp3
+build/e3.mp3
+build/e4.mp3
+build/e5.mp3
+build/e6.mp3
+build/.cmake/api/v1/reply/index-2024-11-11T14-44-06-0944.json
