- Corrected error with non consecutive frames

--- a/.gitignore
+++ b/.gitignore
@@ -556,3 +556,4 @@ build/e4.mp3
 build/e5.mp3
 build/e6.mp3
 build/.cmake/api/v1/reply/index-2024-11-11T14-44-06-0944.json
+build/.cmake/api/v1/reply/index-2024-11-13T11-00-43-0920.json
