- Corrected bug in IMDCT

--- a/.gitignore
+++ b/.gitignore
@@ -567,3 +567,9 @@ build/.cmake/api/v1/reply/target-MP3Reader-Debug-3836744b262420edf8cb.json
 build/.cmake/api/v1/reply/target-portaudio_static-Debug-75cc939da91d55c1e908.json
 build/.cmake/api/v1/reply/target-portaudio-Debug-96db142628bf2f0d4b16.json
 build/CMakeFiles/rules.ninja
+build/.ninja_deps
+build/.ninja_log
+build/.cmake/api/v1/reply/cache-v2-77e05e8724de636dad59.json
+build/.cmake/api/v1/reply/cmakeFiles-v1-8f0f9c2b071acc4cac34.json
+build/.cmake/api/v1/reply/index-2024-11-16T18-42-51-0131.json
+build/.cmake/api/v1/reply/index-2024-11-17T04-07-00-0623.json
