- Grouped loops in extractMainData - Put istream inside Decoder - Added constants for version and CRC polynomial - Lazy creation for bitrates and sampling rates - Return available data if all data not available in bit reservoir - Corrected transformContainer to handle std::vector

--- a/.gitignore
+++ b/.gitignore
@@ -573,3 +573,6 @@ build/.cmake/api/v1/reply/cache-v2-77e05e8724de636dad59.json
 build/.cmake/api/v1/reply/cmakeFiles-v1-8f0f9c2b071acc4cac34.json
 build/.cmake/api/v1/reply/index-2024-11-16T18-42-51-0131.json
 build/.cmake/api/v1/reply/index-2024-11-17T04-07-00-0623.json
+build/Music.mp3
+build/.cmake/api/v1/reply/index-2024-11-17T17-44-56-0592.json
+build/.cmake/api/v1/reply/index-2025-01-13T23-29-10-0586.json
