- Corrected applyWindowing for mixedBlockFlag - Corrected a bug on some songs with par23Length bits not fully used

--- a/.gitignore
+++ b/.gitignore
@@ -576,3 +576,7 @@ build/.cmake/api/v1/reply/index-2024-11-17T04-07-00-0623.json
 build/Music.mp3
 build/.cmake/api/v1/reply/index-2024-11-17T17-44-56-0592.json
 build/.cmake/api/v1/reply/index-2025-01-13T23-29-10-0586.json
+build/.cmake/api/v1/reply/index-2025-02-01T21-46-41-0546.json
+build/.cmake/api/v1/reply/index-2025-02-01T21-55-51-0969.json
+build/2-18 Kokomo.mp3
+build/.cmake/api/v1/reply/index-2025-03-10T00-26-27-0607.json
