--- a/.gitignore
+++ b/.gitignore
@@ -580,3 +580,6 @@ build/.cmake/api/v1/reply/index-2025-02-01T21-46-41-0546.json
 build/.cmake/api/v1/reply/index-2025-02-01T21-55-51-0969.json
 build/2-18 Kokomo.mp3
 build/.cmake/api/v1/reply/index-2025-03-10T00-26-27-0607.json
+build/.cmake/api/v1/reply/index-2025-03-16T21-31-49-0664.json
+build/.cmake/api/v1/reply/index-2025-03-16T21-33-01-0217.json
+build/.cmake/api/v1/reply/index-2025-03-17T21-36-35-0162.json
